# targz-sizes

./: .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  README  configure.ac  sh-log-compile.sh
src/: Makefile.am  targz_sizes.c  targz_sizes.cpp
test/: Makefile.am  basic.sh  null.sh  test-common.sh
test/basic/: Makefile.am  basic.sh  null.sh
test/long-filenames/: Makefile.am  basic.sh  one-full-block.sh  three-blocks.sh  two-blocks.sh  two-full-blocks.sh
